fixed where chevron appears, only show bread crumbs when sidebar is not visible

--- a/src/templates/department.css
+++ b/src/templates/department.css
@@ -219,10 +219,20 @@
   display: block;
 }
 
+.product--bread-crumbs {
+  visibility: hidden;
+  display: none !important;
+}
+
 @media only screen and (max-width: 800px) {
   .leftPanel {
     visibility: hidden;
     display: none;
+  }
+
+  .product--bread-crumbs {
+    visibility: visible;
+    display: flex !important;
   }
 
   .rightPanel {
